# share

./: .env.example  .gitignore  README.md  daily_batch_collect.command  final_delivery_check.command  install_daily_batch.command  pyproject.toml  render.yaml  requirements.txt  setup_worldcup_predictor.command  start_worldcup_predictor.command  stop_worldcup_predictor.command  交付说明.md
data/: name_translations.csv  sample_fixtures.csv  sample_teams.csv
docs/: auto_program_usage.md  calibration_audit_2026-06-05.md  client_requirements.md  deep_research_adoption_plan_2026-06-04.md  deep_research_import_2026-06-04.txt  delivery_checklist.md  final_delivery_report_2026-06-06.md  final_product_demo.md  live_betting_validation_plan.md  model_adoption_spec_v1.md  model_branching_workflow_2026-06-10.md  model_formulas.md  model_optimization_research.md  model_probability_ev_audit_2026-06-05.md  model_review_2026-05-22.md  next_steps_plan.md  online_sharing_deployment.md  prediction_data_standard_v1.md  project_deep_review_report_2026-05-22.md  project_gap_analysis_2026-05-28.md  project_memory.md  project_review_ev_sim_cabin_2026-06-04.md  project_workflow.md  release_notes_2026-05-22.md  theory_research.md  troubleshooting.md  web_ui_usage.md  世界杯预测最终落地交付报告_2026-06-06.docx
tests/: test_api_football.py  test_calibration.py  test_data_layer.py  test_data_quality.py  test_delivery.py  test_deployment.py  test_live_readiness.py  test_localization.py  test_model_governance.py  test_predictor.py  test_report.py  test_safety_and_backtest.py  test_team_strength.py  test_web_storage.py
(+37 files in other folders)
