[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "Explainable football match predictor for the 2026 World Cup."
requires-python = ">=3.10"
dependencies = [
  "certifi>=2024.0.0",
  "openpyxl>=3.1.0",
  "pillow>=10.0.0",
]

[project.scripts]
worldcup-predict = "worldcup_predictor.cli:main"
worldcup-web = "worldcup_predictor.web_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
